Fix the logo on small screens

--- a/static/sass/styles.scss
+++ b/static/sass/styles.scss
@@ -29,7 +29,6 @@
 
   @media only screen and (max-width: $breakpoint-medium) {
     margin-bottom: -12px;
-    margin-top: 12px;
     max-height: 3rem;
   }
 }
